--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,11 +14,13 @@
     "@pg-boss-studio/api": "workspace:^",
     "@trpc/server": "^10.45.0",
     "fastify": "^4.25.2",
+    "pg": "^8.11.3",
     "pg-boss": "^9.0.3"
   },
   "devDependencies": {
     "@pg-boss-studio/tsconfig": "workspace:^",
     "@types/node": "^20.10.3",
+    "@types/pg": "^8.10.9",
     "dotenv-cli": "^7.3.0",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
