Add zod input to tRPC

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,7 +13,8 @@
     "@trpc/client": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "pg": "^8.11.3",
-    "pg-boss": "^9.0.3"
+    "pg-boss": "^9.0.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@pg-boss-studio/tsconfig": "workspace:^",
