--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@trpc/client": "^10.45.0",
-    "@trpc/server": "^10.45.0"
+    "@trpc/server": "^10.45.0",
+    "pg": "^8.11.3",
+    "pg-boss": "^9.0.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@pg-boss-studio/tsconfig": "workspace:^",
     "@types/node": "^20.10.3",
+    "@types/pg": "^8.10.9",
     "typescript": "^5.3.3"
   }
 }
