--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@pg-boss-studio/api": "workspace:^",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-query": "^4.0.0",
     "@trpc/client": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
