--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,13 +12,19 @@
   },
   "dependencies": {
     "@pg-boss-studio/api": "workspace:^",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-query": "^4.0.0",
     "@trpc/client": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
+    "class-variance-authority": "^0.7.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@pg-boss-studio/tsconfig": "workspace:^",
