--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pg-boss-studio/server",
+  "name": "@pg-boss-monitor/server",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.5.0",
-    "@pg-boss-studio/api": "workspace:^",
+    "@pg-boss-monitor/api": "workspace:^",
     "@trpc/server": "^10.45.0",
     "fastify": "^4.25.2",
     "pg": "^8.11.3",
     "pg-boss": "^9.0.3"
   },
   "devDependencies": {
-    "@pg-boss-studio/tsconfig": "workspace:^",
+    "@pg-boss-monitor/tsconfig": "workspace:^",
     "@types/node": "^20.10.3",
     "@types/pg": "^8.10.9",
     "dotenv-cli": "^7.3.0",
