--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pg-boss-studio/api",
+  "name": "@pg-boss-monitor/api",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -17,7 +17,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@pg-boss-studio/tsconfig": "workspace:^",
+    "@pg-boss-monitor/tsconfig": "workspace:^",
     "@types/node": "^20.10.3",
     "@types/pg": "^8.10.9",
     "typescript": "^5.3.3"
