--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-query": "^4.0.0",
     "@tanstack/react-table": "^8.11.2",
+    "@tanstack/react-virtual": "^3.0.1",
     "@trpc/client": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
