--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,11 +16,14 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-query": "^4.0.0",
+    "@tanstack/react-table": "^8.11.2",
+    "@tanstack/react-virtual": "^3.0.1",
     "@trpc/client": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "class-variance-authority": "^0.7.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
